dev-logique-app/app-manifests/base/node-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
