dev-logique-app/app-manifests/base/node-app/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-node-app
spec:
  hosts:
    - "node.logique-rustamapm.com"
  gateways:
    - devops/logique-internal-ingress
  http:
    - route:
        - destination:
            host: node-app
            port:
              number: 80
